--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -20,7 +20,9 @@ section {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0.5em; 
+  weight: 100%;
+}
 
 figcaption,
 figure,
@@ -10756,7 +10758,7 @@ body > header a figure.logo {
   background-image: url("../img/dacor.png");
   width: 3rem;
   height: 5rem;
-  margin: 0;
+  margin: 0.5rem;
   margin-top: 0.4em;
   background-color: transparent;
   background-repeat: no-repeat;
@@ -10781,9 +10783,16 @@ body > header figure.logo {
   float: left; }
 
 body > header h1 {
-  margin: 0;
+  margin: auto;
+  padding: auto;
   font-size: 1em;
+  weight: auto;
   font-weight: lighter; }
+
+article.index div {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
 
 body main article.cuestionario,
 body main article.etiqueta,
