--- a/assets/css/formularios.css
+++ b/assets/css/formularios.css
@@ -176,7 +176,7 @@ pre {
   font-size: 1em; }
 
 a {
-  background-color: transparent; height: 0%;
+  background-color: transparent;
   -webkit-text-decoration-skip: objects; }
 
 a:active,
