--- a/assets/css/enviado.css
+++ b/assets/css/enviado.css
@@ -26,3 +26,12 @@ footer {
 header {
      max-height: 8em;
 }
+main article a:hover {
+    scale: 115%;
+}
+
+main article h2 {background-color: rgb(183, 0, 0);color: white; width: 100%;padding: 0em 5em 0em 5em; border-radius: 5px;}
+
+main article a {
+    margin-top: 4em;
+}
